test/compile_errors/stage1/obj/function_prototype_with_no_body.zig
fn foo() void;
export fn entry() void {
    foo();
}

// function prototype with no body
//
// tmp.zig:1:1: error: non-extern function has no body
